remove card background

--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -4,8 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin_5"
-    android:background="?white"
     android:foreground="?selectableItemBackground"
     android:orientation="vertical">
 
@@ -171,6 +169,7 @@
 
     <View
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="@dimen/height_2"
         android:background="@drawable/wall_item_shadow" />
 
