--- a/SportsSideKick/app/src/main/res/layout/wall_item_store.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_store.xml
@@ -4,8 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin_5"
-    android:background="@color/white"
     android:foreground="?selectableItemBackground">
 
     <View
@@ -140,6 +138,7 @@
 
     <View
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="@dimen/height_2"
         android:layout_alignParentBottom="true"
         android:background="@drawable/wall_item_shadow" />
