--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
         <item name="colorControlHighlight">@color/colorAccentSemiDark</item>
         <item name="colorPrimarySemiLight">@color/colorPrimarySemiLight</item>
         <item name="android:textColorLink">@color/textColorLink</item>
-        <item name="android:windowBackground">@color/login_background</item>
+        <item name="android:windowBackground">@color/white</item>
 
         <item name="black">@color/black</item>
         <item name="white">@color/white</item>
