--- a/SportsSideKick/app/src/main/res/values/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values/dimens.xml
@@ -234,4 +234,5 @@
     <dimen name="header_image_title_margin_top">120dp</dimen>
     <dimen name="fab_margin">0dp</dimen>
     <dimen name="card_negative_padding">-4dp</dimen>
+    <dimen name="item_spacing_wall">30dp</dimen>
 </resources>
