--- a/SportsSideKick/app/src/main/res/drawable/background_splash.xml
+++ b/SportsSideKick/app/src/main/res/drawable/background_splash.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/white" />
-
-    <item android:bottom="16dp">
+    <item >
         <bitmap
-            android:gravity="center"
-            android:src="@drawable/sportingportugal" />
+            android:gravity="fill_horizontal|fill_vertical"
+            android:src="@drawable/background_sporting" />
     </item>
 
 </layer-list>
