--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -329,7 +329,7 @@
         android:layout_alignParentEnd="true"
         android:layout_gravity="bottom"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/fab_plus"
+        android:src="@drawable/ic_more_horiz_white_24dp"
         android:tint="@color/white"
         app:backgroundTint="@color/black" />
 
