--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -109,12 +109,12 @@
 
                             <TextView
                                 android:id="@+id/wall_team_vs"
+                                fontPath="fonts/TitilliumWeb-Light.ttf"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:padding="@dimen/padding_8"
                                 android:text="@string/vs"
-                                fontPath="fonts/TitilliumWeb-Light.ttf"
                                 android:textColor="@color/white"
                                 android:textSize="23sp"
                                 tools:visibility="visible" />
@@ -165,6 +165,22 @@
                             android:textColor="@color/white"
                             tools:text="Thu 15 Feb - 3 days" />
                     </RelativeLayout>
+
+                    <Button
+                        android:id="@+id/buttonTickets"
+                        android:layout_width="wrap_content"
+                        android:layout_height="32dp"
+                        android:minWidth="0dp"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:layout_alignBottom="@id/wall_top_image"
+                        android:layout_alignParentEnd="true"
+                        android:textSize="12sp"
+                        android:layout_margin="8dp"
+                        android:background="@drawable/button_tickets"
+                        android:text="Get Tickets"
+                        android:textAllCaps="false"
+                        android:textColor="@color/white" />
 
                 </RelativeLayout>
 
