--- a/SportsSideKick/app/src/main/res/values/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values/dimens.xml
@@ -235,4 +235,5 @@
     <dimen name="fab_margin">0dp</dimen>
     <dimen name="card_negative_padding">-4dp</dimen>
     <dimen name="item_spacing_wall">30dp</dimen>
+    <dimen name="item_spacing_news">16dp</dimen>
 </resources>
