--- a/SportsSideKick/app/src/main/res/layout/popup_video_login_sing_up.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_video_login_sing_up.xml
@@ -136,7 +136,7 @@
                 android:layout_height="@dimen/height_40"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/margin_30"
-                android:src="@drawable/logo_fq" />
+                android:src="@drawable/logo_fc" />
         </LinearLayout>
     </RelativeLayout>
 
