--- a/SportsSideKick/app/src/main/res/layout-large/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_login.xml
@@ -331,7 +331,7 @@
                         android:layout_height="@dimen/height_40"
                         android:layout_gravity="center"
                         android:layout_marginTop="@dimen/margin_40"
-                        android:src="@drawable/logo_fq" />
+                        android:src="@drawable/logo_fc" />
                 </LinearLayout>
             </RelativeLayout>
         </ScrollView>
