--- a/SportsSideKick/app/src/main/res/layout-large/popup_login_sing_up.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_login_sing_up.xml
@@ -118,7 +118,7 @@
                 android:layout_height="@dimen/height_40"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/margin_40"
-                android:src="@drawable/logo_fq" />
+                android:src="@drawable/logo_fc" />
         </LinearLayout>
     </RelativeLayout>
 
