--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -8,6 +8,17 @@
     tools:context=".ui.fragment.other.ChatFragment"
     tools:paddingTop="0dp">
 
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:layout_marginBottom="10dp"
+        android:layout_above="@id/input_container"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="12dp"
+        android:src="@drawable/logo_fc"
+        android:tint="#dbdbdb"/>
+
     <!-- Empty chat info text -->
     <TextView
         android:id="@+id/info_message"
@@ -18,7 +29,6 @@
         android:text="@string/no_message_text"
         android:textColor="@color/white"
         android:textSize="@dimen/font_size_10" />
-
 
     <RelativeLayout
         android:id="@+id/chat_info_line"
