--- a/SportsSideKick/app/src/main/res/layout/message_item_user.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item_user.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="@dimen/margin_5"
-        android:background="?chatBubbleRightImage">
+        android:background="@drawable/chat_message_right">
 
         <TextView
             android:id="@+id/text"
