--- a/SportsSideKick/app/src/main/res/layout/message_item_user.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item_user.xml
@@ -62,7 +62,8 @@
         android:layout_toStartOf="@+id/splitter"
         android:alpha="0.5"
         android:text="@string/you"
-        android:textColor="?chatDetailsColorRef"
+        tools:text="Sender"
+        android:textColor="@color/chatDetailsColorRef"
         android:textSize="@dimen/font_size_10" />
 
     <TextView
@@ -71,20 +72,23 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/content_container"
         android:layout_toStartOf="@+id/timestamp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginStart="4dp"
         android:alpha="0.5"
         android:text="|"
-        android:textColor="?chatDetailsColorRef"
+        android:textColor="@color/chatDetailsColorRef"
         android:textSize="@dimen/font_size_10"
         tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/timestamp"
+        tools:text="Date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_below="@id/content_container"
         android:layout_marginEnd="@dimen/margin_15"
         android:alpha="0.5"
-        android:textColor="?chatDetailsColorRef"
+        android:textColor="@color/chatDetailsColorRef"
         android:textSize="@dimen/font_size_10" />
 </RelativeLayout>
