--- a/SportsSideKick/app/src/main/res/drawable/button_login_login.xml
+++ b/SportsSideKick/app/src/main/res/drawable/button_login_login.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient
-        android:angle="270"
-        android:endColor="#628001"
-        android:startColor="#cbfd26" />
+    <solid
+        android:color="@color/colorPrimary"/>
     <corners android:radius="48dp" />
 </shape>
