--- a/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
@@ -30,10 +30,10 @@
             android:layout_marginEnd="1dp"
             android:gravity="center_vertical"
             android:paddingBottom="16dp"
+            android:textAllCaps="true"
             android:text="@string/join"
-            android:textColor="@color/white_alpha_70"
-            android:textSize="@dimen/font_size_16"
-            android:textStyle="bold" />
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_size_16"/>
 
         <ImageButton
             android:id="@+id/backButton"
