--- a/SportsSideKick/app/src/main/res/drawable/facebook_button.xml
+++ b/SportsSideKick/app/src/main/res/drawable/facebook_button.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="50dp" />
-    <gradient
-        android:angle="270"
-        android:endColor="#2d4881"
-        android:startColor="#4462a3" />
+    <solid android:color="#FF395797" />
 </shape>
