--- a/SportsSideKick/app/src/main/res/drawable/text_login_selector.xml
+++ b/SportsSideKick/app/src/main/res/drawable/text_login_selector.xml
@@ -1,24 +1,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_focused="false">
-        <layer-list>
-            <item>
-                <shape>
-                    <solid android:color="#1b504d" />
-                    <corners android:radius="100dp" />
-                </shape>
-            </item>
-            <item android:bottom="2dp">
-                <shape>
-                    <solid android:color="#002522" />
-                    <corners android:radius="100dp" />
-                </shape>
-            </item>
-        </layer-list>
+        <shape>
+            <solid android:color="@color/white" />
+            <corners android:radius="100dp" />
+        </shape>
     </item>
 
     <item android:state_focused="true">
         <shape>
-            <solid android:color="@color/colorPrimaryMediumDarkSemiTransparent" />
+            <solid android:color="@color/white" />
             <stroke android:width="1dp" android:color="@color/colorAccentSemiDark" />
             <corners android:radius="100dp" />
         </shape>
