--- a/SportsSideKick/app/src/main/res/layout/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_login.xml
@@ -29,14 +29,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/top_buttons_container">
-        
+
         <ImageView
             android:id="@+id/backgroundImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:foreground="#99000000"
-            tools:src="@drawable/background_sporting"
-            tools:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            tools:src="@drawable/background_sporting" />
 
         <RelativeLayout
             android:id="@+id/forgot_password_container"
@@ -101,16 +101,15 @@
                     android:layout_width="56dp"
                     android:layout_height="56dp"
                     android:layout_gravity="center"
-                    android:visibility="gone"
                     android:layout_marginBottom="8dp"
-                    android:src="@drawable/club_logo" />
+                    android:src="@drawable/club_logo"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/title_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:visibility="gone"
                     android:layout_marginBottom="24dp"
                     android:layout_marginTop="-4dp"
                     android:gravity="center"
@@ -118,16 +117,17 @@
                     android:maxWidth="100dp"
                     android:text="@string/slogan"
                     android:textColor="@color/white_alpha_40"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:visibility="gone" />
 
                 <Button
                     android:id="@+id/facebook_button"
                     style="@style/facebook_login_button_phone"
                     android:layout_width="match_parent"
-                    android:layout_marginTop="60dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/margin_30"
                     android:layout_marginStart="@dimen/margin_30"
+                    android:layout_marginTop="60dp"
                     android:text="@string/login_facebook"
                     android:textAllCaps="false"
                     android:textColor="@color/white_alpha_90"
@@ -160,7 +160,7 @@
                         android:layout_width="0dp"
                         android:layout_height="@dimen/height_1"
                         android:layout_weight="1"
-                        android:alpha="0.15"
+                        android:alpha="0.5"
                         android:background="?popupsCaptionColor" />
 
                     <TextView
@@ -169,7 +169,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
-                        android:alpha="0.5"
                         android:gravity="center"
                         android:text="@string/or"
                         android:textAllCaps="true"
@@ -179,7 +178,7 @@
                         android:layout_width="0dp"
                         android:layout_height="@dimen/height_1"
                         android:layout_weight="1"
-                        android:alpha="0.15"
+                        android:alpha="0.5"
                         android:background="?popupsCaptionColor" />
 
                     <View
@@ -202,8 +201,8 @@
                     android:nextFocusDown="@+id/login_password"
                     android:padding="@dimen/padding_8"
                     android:textAlignment="center"
-                    android:textColor="?white"
-                    android:textColorHint="#a1ffffff" />
+                    android:textColor="?black"
+                    android:textColorHint="#8a000000" />
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/passwordInputLayout"
@@ -229,8 +228,8 @@
                         android:inputType="textPassword"
                         android:padding="@dimen/padding_8"
                         android:textAlignment="center"
-                        android:textColor="?white"
-                        android:textColorHint="#a1ffffff"
+                        android:textColor="?black"
+                        android:textColorHint="#8a000000"
                         android:theme="@style/AppTheme.BlackControls" />
 
                 </android.support.design.widget.TextInputLayout>
@@ -266,9 +265,9 @@
                     android:id="@+id/login_progress_bar"
                     android:layout_width="@dimen/prodgres_bar"
                     android:layout_height="@dimen/prodgres_bar"
-                    android:elevation="@dimen/elevation_2"
-                    android:layout_marginTop="-34dp"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="-34dp"
+                    android:elevation="@dimen/elevation_2"
                     android:theme="@style/AppTheme.BlackAccent"
                     android:visibility="gone"
                     tools:visibility="gone" />
@@ -333,7 +332,7 @@
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentBottom="true"
-            android:alpha="0.25"
+            android:alpha="0.75"
             android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />
 
         <TextView
@@ -343,8 +342,8 @@
             android:layout_centerInParent="true"
             android:layout_marginEnd="1dp"
             android:gravity="center_vertical"
-            android:textAllCaps="true"
             android:text="@string/sign_in"
+            android:textAllCaps="true"
             android:textColor="@color/white"
             android:textSize="@dimen/font_size_16" />
 
@@ -368,9 +367,9 @@
     <ImageView
         android:layout_width="52dp"
         android:layout_height="52dp"
-        android:src="@drawable/logo_fc"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
-        android:layout_alignParentBottom="true"/>
+        android:src="@drawable/logo_fc" />
 
 </RelativeLayout>
