--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:foreground="?selectableItemBackground">
 
     <View
@@ -39,7 +39,6 @@
 
     <TextView
         android:id="@+id/authorName"
-        tools:text="Karen Smith"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/authorImage"
@@ -48,7 +47,8 @@
         android:layout_toEndOf="@+id/authorImage"
         android:layout_toStartOf="@+id/image"
         android:gravity="center_vertical|start"
-        android:textColor="@color/colorPrimaryVeryLight" />
+        android:textColor="@color/colorPrimaryVeryLight"
+        tools:text="Karen Smith" />
 
     <TextView
         android:id="@+id/text_content"
@@ -59,19 +59,18 @@
         android:layout_toEndOf="@+id/strip"
         android:layout_toStartOf="@+id/image"
         android:ellipsize="end"
-        android:lineSpacingMultiplier="0.8"
-        android:maxLines="3"
-        android:minLines="1"
+        android:lineSpacingMultiplier="0.9"
+        android:maxLines="2"
         android:padding="@dimen/padding_8"
-        android:scrollHorizontally="true"
-        tools:text="@string/lorem_ipsum"
-        android:textColor="?black"
-        android:textSize="16sp" />
+        android:textColor="#1b1c1a"
+        android:textSize="16sp"
+        tools:ellipsize="none"
+        tools:text="@string/lorem_ipsum" />
 
     <LinearLayout
         android:id="@+id/likes_and_comments"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_25"
+        android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/image"
         android:layout_alignWithParentIfMissing="true"
         android:layout_below="@id/text_content"
@@ -84,8 +83,8 @@
         <TextView
             android:id="@+id/dateLabel"
             android:layout_width="wrap_content"
-            android:layout_marginEnd="4dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
             android:textColor="#40000000"
             android:textSize="12sp"
             tools:text="Yesterday" />
@@ -122,10 +121,10 @@
             <TextView
                 android:id="@+id/likes_count"
                 android:layout_width="wrap_content"
-                android:layout_marginStart="4dp"
                 android:layout_height="wrap_content"
-                tools:text="6901"
-                android:textSize="@dimen/font_size_10" />
+                android:layout_marginStart="4dp"
+                android:textSize="@dimen/font_size_10"
+                tools:text="6901" />
         </LinearLayout>
 
         <LinearLayout
@@ -149,8 +148,8 @@
                 android:id="@+id/comments_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="204"
-                android:textSize="@dimen/font_size_10" />
+                android:textSize="@dimen/font_size_10"
+                tools:text="204" />
 
         </LinearLayout>
 
@@ -159,7 +158,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_2"
-        android:visibility="gone"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/wall_item_shadow" />
+        android:background="@drawable/wall_item_shadow"
+        android:visibility="gone" />
 </RelativeLayout>
